--- a/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
@@ -29,11 +29,11 @@
                     </connections>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-dU-jON" customClass="DFProfileStackView">
-                    <rect key="frame" x="59" y="23" width="50" height="50"/>
+                    <rect key="frame" x="63" y="18" width="40" height="55"/>
                     <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="3Rn-MY-Zfc"/>
-                        <constraint firstAttribute="width" priority="100" constant="50" id="Bti-1H-A3s"/>
+                        <constraint firstAttribute="height" constant="55" id="3Rn-MY-Zfc"/>
+                        <constraint firstAttribute="width" priority="100" constant="40" id="Bti-1H-A3s"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOD-io-kg3" customClass="DFProfileStackView">
@@ -45,7 +45,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BV6-BM-Whi">
-                    <rect key="frame" x="576" y="37" width="16" height="22"/>
+                    <rect key="frame" x="108" y="18" width="16" height="22"/>
                     <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -64,19 +64,19 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="bottom" secondItem="ibH-dU-jON" secondAttribute="bottom" id="3fQ-Z4-E6U"/>
-                <constraint firstAttribute="trailing" secondItem="BV6-BM-Whi" secondAttribute="trailing" constant="8" id="5yi-yO-taK"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BV6-BM-Whi" secondAttribute="trailing" constant="8" id="5yi-yO-taK"/>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" constant="8" id="9JY-vK-N88"/>
                 <constraint firstAttribute="trailing" secondItem="opa-QM-Zd8" secondAttribute="trailing" id="Cht-pI-f4J"/>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
+                <constraint firstItem="ibH-dU-jON" firstAttribute="top" secondItem="BV6-BM-Whi" secondAttribute="top" id="KZ2-ND-fAY"/>
                 <constraint firstAttribute="bottom" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="M26-Yf-BkK"/>
                 <constraint firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="PPK-FG-q4r"/>
                 <constraint firstItem="opa-QM-Zd8" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="SPk-Of-ByB"/>
                 <constraint firstItem="gGV-RF-dqd" firstAttribute="top" secondItem="VOD-io-kg3" secondAttribute="bottom" constant="8" id="WrZ-EP-rZx"/>
                 <constraint firstAttribute="trailing" secondItem="gGV-RF-dqd" secondAttribute="trailing" id="X0I-pQ-m3J"/>
-                <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="1" id="j0x-VC-XdR"/>
-                <constraint firstItem="BV6-BM-Whi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="8" id="kcs-Cc-INU"/>
+                <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="5" id="j0x-VC-XdR"/>
+                <constraint firstItem="BV6-BM-Whi" firstAttribute="leading" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="5" id="kcs-Cc-INU"/>
                 <constraint firstItem="gGV-RF-dqd" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="t59-Ti-M7Q"/>
-                <constraint firstItem="BV6-BM-Whi" firstAttribute="centerY" secondItem="ibH-dU-jON" secondAttribute="centerY" id="vTh-d4-D0T"/>
             </constraints>
             <point key="canvasLocation" x="369" y="497"/>
         </view>
