--- a/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
@@ -9,76 +9,89 @@
             <connections>
                 <outlet property="addPersonButton" destination="BV6-BM-Whi" id="dXy-XZ-RHF"/>
                 <outlet property="commentToolbar" destination="opa-QM-Zd8" id="jXy-O2-nma"/>
+                <outlet property="contentBottomConstraint" destination="FCe-tz-xNW" id="adB-CX-ghx"/>
                 <outlet property="recipientsProfileStackView" destination="ibH-dU-jON" id="i2l-b0-cYa"/>
                 <outlet property="senderProfileStackView" destination="VOD-io-kg3" id="2Ck-hr-mM8"/>
                 <outlet property="tableView" destination="gGV-RF-dqd" id="e4d-fd-JGr"/>
-                <outlet property="view" destination="mpa-i4-xv8" id="uaF-md-SiN"/>
+                <outlet property="view" destination="paW-zf-etk" id="OIO-gN-aGc"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="mpa-i4-xv8">
+        <view contentMode="scaleToFill" id="paW-zf-etk">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gGV-RF-dqd">
-                    <rect key="frame" x="0.0" y="81" width="600" height="519"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="YtH-72-Of8"/>
-                        <outlet property="delegate" destination="-1" id="kPh-ct-OIy"/>
-                    </connections>
-                </tableView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-dU-jON" customClass="DFProfileStackView">
-                    <rect key="frame" x="63" y="18" width="40" height="55"/>
-                    <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
+                <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mpa-i4-xv8" userLabel="ContentView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <subviews>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gGV-RF-dqd">
+                            <rect key="frame" x="0.0" y="81" width="600" height="519"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="YtH-72-Of8"/>
+                                <outlet property="delegate" destination="-1" id="kPh-ct-OIy"/>
+                            </connections>
+                        </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-dU-jON" customClass="DFProfileStackView">
+                            <rect key="frame" x="63" y="18" width="40" height="55"/>
+                            <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="55" id="3Rn-MY-Zfc"/>
+                                <constraint firstAttribute="width" priority="100" constant="40" id="Bti-1H-A3s"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOD-io-kg3" customClass="DFProfileStackView">
+                            <rect key="frame" x="8" y="8" width="50" height="65"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="eNe-mr-nH6"/>
+                                <constraint firstAttribute="height" constant="65" id="gtS-kK-zo3"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BV6-BM-Whi">
+                            <rect key="frame" x="108" y="18" width="16" height="22"/>
+                            <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="addPersonPressed:" destination="-1" eventType="touchUpInside" id="uph-oH-qs2"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opa-QM-Zd8" customClass="DFCommentToolbar">
+                            <rect key="frame" x="0.0" y="548" width="600" height="52"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="52" id="lDz-K9-AYs"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="55" id="3Rn-MY-Zfc"/>
-                        <constraint firstAttribute="width" priority="100" constant="40" id="Bti-1H-A3s"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOD-io-kg3" customClass="DFProfileStackView">
-                    <rect key="frame" x="8" y="8" width="50" height="65"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="eNe-mr-nH6"/>
-                        <constraint firstAttribute="height" constant="65" id="gtS-kK-zo3"/>
-                    </constraints>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BV6-BM-Whi">
-                    <rect key="frame" x="108" y="18" width="16" height="22"/>
-                    <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="addPersonPressed:" destination="-1" eventType="touchUpInside" id="uph-oH-qs2"/>
-                    </connections>
-                </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opa-QM-Zd8" customClass="DFCommentToolbar">
-                    <rect key="frame" x="0.0" y="548" width="600" height="52"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="52" id="lDz-K9-AYs"/>
+                        <constraint firstItem="VOD-io-kg3" firstAttribute="bottom" secondItem="ibH-dU-jON" secondAttribute="bottom" id="3fQ-Z4-E6U"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BV6-BM-Whi" secondAttribute="trailing" constant="8" id="5yi-yO-taK"/>
+                        <constraint firstItem="VOD-io-kg3" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" constant="8" id="9JY-vK-N88"/>
+                        <constraint firstAttribute="trailing" secondItem="opa-QM-Zd8" secondAttribute="trailing" id="Cht-pI-f4J"/>
+                        <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
+                        <constraint firstItem="ibH-dU-jON" firstAttribute="top" secondItem="BV6-BM-Whi" secondAttribute="top" id="KZ2-ND-fAY"/>
+                        <constraint firstAttribute="bottom" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="M26-Yf-BkK"/>
+                        <constraint firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="PPK-FG-q4r"/>
+                        <constraint firstItem="opa-QM-Zd8" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="SPk-Of-ByB"/>
+                        <constraint firstItem="gGV-RF-dqd" firstAttribute="top" secondItem="VOD-io-kg3" secondAttribute="bottom" constant="8" id="WrZ-EP-rZx"/>
+                        <constraint firstAttribute="trailing" secondItem="gGV-RF-dqd" secondAttribute="trailing" id="X0I-pQ-m3J"/>
+                        <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="5" id="j0x-VC-XdR"/>
+                        <constraint firstItem="BV6-BM-Whi" firstAttribute="leading" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="5" id="kcs-Cc-INU"/>
+                        <constraint firstItem="gGV-RF-dqd" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="t59-Ti-M7Q"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="VOD-io-kg3" firstAttribute="bottom" secondItem="ibH-dU-jON" secondAttribute="bottom" id="3fQ-Z4-E6U"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BV6-BM-Whi" secondAttribute="trailing" constant="8" id="5yi-yO-taK"/>
-                <constraint firstItem="VOD-io-kg3" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" constant="8" id="9JY-vK-N88"/>
-                <constraint firstAttribute="trailing" secondItem="opa-QM-Zd8" secondAttribute="trailing" id="Cht-pI-f4J"/>
-                <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
-                <constraint firstItem="ibH-dU-jON" firstAttribute="top" secondItem="BV6-BM-Whi" secondAttribute="top" id="KZ2-ND-fAY"/>
-                <constraint firstAttribute="bottom" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="M26-Yf-BkK"/>
-                <constraint firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="PPK-FG-q4r"/>
-                <constraint firstItem="opa-QM-Zd8" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="SPk-Of-ByB"/>
-                <constraint firstItem="gGV-RF-dqd" firstAttribute="top" secondItem="VOD-io-kg3" secondAttribute="bottom" constant="8" id="WrZ-EP-rZx"/>
-                <constraint firstAttribute="trailing" secondItem="gGV-RF-dqd" secondAttribute="trailing" id="X0I-pQ-m3J"/>
-                <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="5" id="j0x-VC-XdR"/>
-                <constraint firstItem="BV6-BM-Whi" firstAttribute="leading" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="5" id="kcs-Cc-INU"/>
-                <constraint firstItem="gGV-RF-dqd" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="t59-Ti-M7Q"/>
+                <constraint firstAttribute="trailing" secondItem="mpa-i4-xv8" secondAttribute="trailing" id="6zl-cW-QSx"/>
+                <constraint firstAttribute="bottom" secondItem="mpa-i4-xv8" secondAttribute="bottom" id="FCe-tz-xNW"/>
+                <constraint firstItem="mpa-i4-xv8" firstAttribute="top" secondItem="paW-zf-etk" secondAttribute="top" id="K62-Ga-GdH"/>
+                <constraint firstItem="mpa-i4-xv8" firstAttribute="leading" secondItem="paW-zf-etk" secondAttribute="leading" id="W2O-Gt-GUg"/>
             </constraints>
-            <point key="canvasLocation" x="369" y="497"/>
+            <point key="canvasLocation" x="304" y="-78"/>
         </view>
     </objects>
     <resources>
