--- a/strand/iOS/Strand/Strand/DFDismissableModalViewController.xib
+++ b/strand/iOS/Strand/Strand/DFDismissableModalViewController.xib
@@ -17,8 +17,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USo-13-dva">
-                    <rect key="frame" x="556" y="8" width="36" height="42"/>
-                    <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                    <rect key="frame" x="564" y="0.0" width="36" height="42"/>
+                    <inset key="contentEdgeInsets" minX="15" minY="5" maxX="5" maxY="15"/>
                     <state key="normal" image="Assets/Icons/XIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -29,8 +29,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="USo-13-dva" secondAttribute="trailing" constant="8" id="856-LW-mAh"/>
-                <constraint firstItem="USo-13-dva" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="baW-se-JuQ"/>
+                <constraint firstAttribute="trailing" secondItem="USo-13-dva" secondAttribute="trailing" id="856-LW-mAh"/>
+                <constraint firstItem="USo-13-dva" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="baW-se-JuQ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <point key="canvasLocation" x="360" y="532"/>
