Updating summary page with photo eval actions

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -230,7 +230,7 @@
 				<th class='before b-r' colspan='3' > </th>
 				<th class='before b-r' colspan='3' > Photos </th>
 				<th class='before b-r' colspan='1' > </th>				
-				<th class='actions b-r' colspan='5'> Actions (7d) </th>
+				<th class='actions b-r' colspan='6'> Actions (7d) </th>
 				<th class='notifications b-r' colspan='2'> Notifications </th>
 				<!-- <th class='location b-r' colspan='2'> Location </th> -->
 				<th class='after' colspan='8' > </th>
@@ -246,6 +246,7 @@
 				<td class='strands_created center b-r'> Swaps <br> Created </td>
 				<td class='strands_joined center b-r'> Swaps <br> Joined </td>
 				<td class='photos_added center b-r'> Photos <br> Added  </td>
+				<td class='photos_eval center b-r' > Photos <br> Eval'ed </td>
 				<td class='favs center b-r'> Favs </td>
 				<td class='comments center b-r'> Comments </td>
 				<td class='notifications center b-r'> Sent <br> (7d)</td>
@@ -270,6 +271,7 @@
 				<td class='strands_created center b-r'> {{ entry.weeklyStrandsCreated }} </td>
 				<td class='strands_joined center b-r'> {{ entry.weeklyStrandsJoined }} </td>
 				<td class='photos_added center b-r'> {{ entry.weeklyPhotosAdded }} </td>
+				<td class='photos_eval center b-r' > {{ entry.weeklyPhotoEvals }} </td>
 				<td class='favs center b-r'> {{entry.weeklyFavs }} </td>
 				<td class='comments center b-r'> {{entry.weeklyComments }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
